feat: Implement admin panel for meal management
Introduces an administrative interface for managing meals. This includes:
- A new `AdminContext` to manage admin state and authentication.
- An `AdminLoginModal` for admin authentication.
- Conditional rendering of edit buttons on meal cards based on admin status.
- Persistence of meal data using a custom hook, now managed within the `AdminProvider`.
- Basic styling adjustments for mobile view.
- Removal of redundant local storage logic in favor of the new persistent data hook.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       .animate-button-pop {
         animation: button-pop 0.3s ease-out;
       }
+      @media (max-width: 768px) {
+        body {
+          background-image: none;
+          background-attachment: scroll;
+        }
+      }
     </style>
   <script type="importmap">
 {
